# SciLink

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  config.py  example.ipynb  exp2claims.py  exp2dft.py  exp2lit.py  exp2lit2dft.py  pyproject.toml  requirements.txt  run_image_analysis.py  setup.py  test_sandbox.py
.github/workflows/: test.yml
data/: GH_stm.json  GH_stm.tif  GO_cafm.json  GO_cafm.tif  MoS2_stem.json  MoS2_stem.npy  MoS2_tem.json  YBCO_tem.json  YBCO_tem.tif  bfo_tem.json  eels.json  oxide_catalyst.json
examples/: dft_workflow.py  microscopy_novelty.py  novelty_assesment_microscopy.py  novelty_assesment_microscopy_local.py  novelty_assesment_spectroscopy.py  novelty_assesment_spectroscopy_local.py  orchestrator_example.py  spectral_novelty.py
examples/.virtual_documents/: microscopy_novelty.ipynb
examples/data/: MoS2_stem_Exp-000-2.json  MoS2_stem_Exp-000-2.npy  MoS2_stem_Exp-001-5.json  MoS2_stem_Exp-001-5.npy  MoS2_stem_Exp-002-5.json  MoS2_stem_Exp-002-5.npy  nanoparticles.json  tepl.json
exp_agents/: fft_nmf_analyzer.py  instruct.py  microscopy_agent.py  spectroscopy_agent.py  utils.py
fft_nmf_results/: oxide_catalyst_analysis_abundances.npy  oxide_catalyst_analysis_components.npy
lit_agents/: literature_agent.py
scilink/: __init__.py  auth.py  executors.py
scilink/cli/: __init__.py  workflows.py
scilink/workflows/: __init__.py  analyzers.py  dft_recommendation_workflow.py  dft_workflow.py  experiment2dft.py  experiment_novelty_workflow.py  microscopy2dft.py  microscopy_novelty_workflow.py  (+1 more)
sim_agents/: ase_agent.py  executors.py  instruct.py  llm_client.py  structure_agent.py  tools.py  utils.py  val_agent.py  vasp_agent.py
workflows/: dft_recommendation_workflow.py  dft_workflow.py  microscopy_novelty_workflow.py  spectroscopy_novelty_workflow.py
(+32 files in other folders)
